small visal errors corrected incl. font size, tablet view, fixint cert wrap on 320px, css styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Kanit:wght@200&family=Playfair+Display&display=swap');
 
+/* =====================
+	global (all pages)
+=======================*/
+
 * {
 	box-sizing: border-box;
 	list-style: none;
@@ -150,9 +154,9 @@ hr {
 	}
 }
 
-/* ===========
-logo & nav 
-=============*/
+/* =========================
+	logo & nav (home page)
+===========================*/
 
 .nav-container {
 	min-height: auto;
@@ -193,9 +197,9 @@ logo & nav
 	letter-spacing:1px;
 }
 
-/* ====+++++=======
-hero & left-text  
-======++++=======*/
+/* ===============================
+	hero & left-text (home page) 
+=================================*/
 
 .hero-container {
 	width: 100%;
@@ -240,9 +244,9 @@ hero & left-text
 	animation-fill-mode: forwards;
 }
 
-/* ===============
-testimonials 
-=================*/
+/* ============================
+	testimonials (hope page)
+==============================*/
 
 #happy-customers h2 {
 	text-align: center;
@@ -305,9 +309,9 @@ testimonials
 	font-weight: 300;
 }
 
-/* ==============
-what we offer 
-================*/
+/* =============================
+	what we offer (home page)
+===============================*/
 
 .services-container {
 	width: 100%;
@@ -372,7 +376,6 @@ what we offer
 
 #offer-satisfsction-h3 {
 	color: #c8673c;
-	font-weight: 900;
 	font-size: 130%;
 	margin: 0;
 }
@@ -383,9 +386,9 @@ what we offer
 	animation-fill-mode: forwards;
 }
 
-/* ====+++++=======
-certs  
-======++++=======*/
+/* =====================
+	certs (all pages) 
+=======================*/
 
 .certs-container {
 	display:inline-flex;
@@ -408,6 +411,7 @@ certs
 
 #middle-certs {
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	padding: 0 5%;
 	justify-content: center;
@@ -418,9 +422,9 @@ certs
 	padding:5% 1% 5% 1%;
 }
 
-/* ===============
-contact 
-=================*/
+/* =======================
+	contact (all pages)
+=========================*/
 
 .contact-container {
 	display: flex;
@@ -471,14 +475,14 @@ contact
 #contact-map iframe {
 	float: left;
 	max-height: 100%;
-	min-width: 360px;
+	min-width: 320px;
 	width:100%;
 	border: 0;
 }
 
-/* ====+++++=========
-social media  
-======++++=========*/
+/* ===========================
+	social media (all pages) 
+=============================*/
 
 .social-media-container {
 	width: 100%;
@@ -507,9 +511,9 @@ social media
 	color: #C7382E;
 }
 
-/* ====+++++=========
-copyrights  
-======++++=========*/
+/* =========================
+	copyrights (all pages) 
+===========================*/
 
 .copyright-container {
 	height: 2rem;
@@ -521,9 +525,9 @@ copyrights
 	margin-left: 1%;
 }
 
-/* ==================================
-services page
-====================================*/
+/* =================
+	services page
+===================*/
 
 .services-container-page {
 	padding:200px 5% 200px 5%;
@@ -537,13 +541,15 @@ services page
 
 .services-left {
 	float: left;
-	width: 45%;
+	width: 100%;
+	text-align: center;
 	padding-right: 2%;
 }
 
 .services-right {
 	float: right;
-	width: 45%;
+	width: 100%;
+	text-align: center;
 	padding-left: 2%;
 }
 
@@ -573,12 +579,12 @@ services page
 }
 
 .services-left-heading p {
-	text-align: left;
+	text-align: center;
 	font-size: 120%;
 }
 
 .services-left-heading h2 {
-	text-align: left;
+	text-align: center;
 	font-size: 120%;
 }
 
@@ -591,12 +597,12 @@ services page
 }
 
 .services-right-heading p {
-	text-align: right;
+	text-align: center;
 	font-size: 120%;
 }
 
 .services-right-heading h2 {
-	text-align: right;
+	text-align: center;
 	font-size: 120%;
 }
 
@@ -609,9 +615,9 @@ services page
 	background-size: auto ;
 }
 
-/* ===================================
-gallery page
-====================================*/
+/* ================
+	gallery page
+=================*/
 
 .gallery-header {
 	clear: both;
@@ -663,9 +669,9 @@ gallery page
 	}
 }
 
-/* ===================================
-contact us page
-====================================*/
+/* ===================
+	contact us page
+====================*/
 
 .contact-us-container {
 	display: flex;
@@ -748,15 +754,26 @@ contact us page
 	padding-top: 100px;
 }
 
-/* ==================================
-				media
-====================================*/
+/* ====================
+	media (all pages)
+======================*/
+
+@media screen and (min-width: 320px) {
+	#services-container-text {
+		height:100%;
+	}
+
+	#offer-satisfsction-h3 {
+		font-size: 119%;
+	}
+
+	.testimonials-container-box-text {
+		padding: 3%;
+		font-size: 110%;
+	}
+}
 
 @media screen and (min-width: 600px) {
-	
-	.gallery-column {
-		max-width: 50%;
-	}
 	
 	#offer-satisfsction-h3 {
 		font-size: 180%;
@@ -768,8 +785,15 @@ contact us page
 	}
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 768px) {
+	.testimonials-container { 
+		padding: 10% 0;
+	}
 	
+	.testimonials-container-box-text {
+		font-size: 120%;
+	}
+
 	.services-container-page {
 		padding:100px 5% 200px 5%;
 		background: rgb(253,253,249);
@@ -778,18 +802,16 @@ contact us page
 	
 	.services-left {
 		float: left;
-		/* clear: both; */
-		width: 33%;
+		width: 30%;
 		padding-top: 5%;
 	}
 	.services-right {
 		float: right;
-		/* clear: both; */
-		width: 33%;
+		width: 30%;
 		padding-top: 5%;
 	}
 	.services-center {
-		width: 33%;
+		width: 40%;
 		margin: 0 auto;
 		padding-top: 1%;
 	}
@@ -858,6 +880,10 @@ contact us page
 		
 	}
 	
+	.gallery-column {
+		max-width: 50%;
+	}
+	
 	#contact-map {
 		width: 55%;
 		height: auto;
@@ -884,14 +910,6 @@ contact us page
 	#contact-text {
 		width: 45%;
 	}
-	
-	.testimonials-container { 
-		padding: 10% 15%;
-	}
-	
-	.testimonials-container-box-text {
-		font-size: 120%;
-	}
 }
 
 @media screen and (min-width: 1200px) {
@@ -909,6 +927,17 @@ contact us page
 		font-size: 140%;
 	}
 	
+	.services-left {
+		width: 33%;
+	}
+	.services-right {
+		width: 33%;
+	}
+
+	.services-center {
+		width: 33%;
+	}
+
 	#services-container-text {
 		max-width: 800px;
 		height: 95%;
